[gd_scene load_steps=5 format=3 uid="uid://74won0hahnpu"]

[ext_resource type="Script" path="res://scripts/mini_games/pie.gd" id="1_p5s2k"]
[ext_resource type="Texture2D" uid="uid://c7ttwrvqjbkrb" path="res://textures/mini_games/Pie/crosshead.png" id="2_ynsxt"]

[sub_resource type="Gradient" id="Gradient_eiy5b"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.569825, 0.69, 0.5589, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0rcs3"]
gradient = SubResource("Gradient_eiy5b")
width = 480
height = 48

[node name="pie" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_p5s2k")

[node name="game" type="Control" parent="."]
anchors_preset = 0
offset_right = 480.0
offset_bottom = 266.0

[node name="background" type="ColorRect" parent="game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.556863, 0.764706, 1)

[node name="background2" type="TextureRect" parent="game"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ynsxt")

[node name="bar" type="TextureRect" parent="game"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -48.0
offset_right = 240.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("GradientTexture2D_0rcs3")

[node name="marker" type="ColorRect" parent="game"]
layout_mode = 0
offset_top = 202.0
offset_right = 10.0
offset_bottom = 266.0
color = Color(0.690196, 0.956863, 1, 1)

[node name="sweet_spot1" type="ColorRect" parent="game"]
layout_mode = 0
offset_left = 167.0
offset_top = 218.0
offset_right = 177.0
offset_bottom = 266.0
color = Color(1, 1, 1, 0.607843)

[node name="sweet_spot2" type="ColorRect" parent="game"]
layout_mode = 0
offset_left = 303.0
offset_top = 218.0
offset_right = 313.0
offset_bottom = 266.0
color = Color(1, 1, 1, 0.607843)
